# learn

./: .gitignore  README.md
ada-exception/: Makefile  exceptions.ads  main.adb
ada-hello/: Makefile  learn.adb
adaspark-proveincrement/: Makefile  increment.adb  increment.ads  main.adc  main.gpr
android-rust-ndk/androidlib/: Cargo.toml
android-rust-ndk/androidlib/scripts/: build.sh  clean.sh  sync.sh
android-rust-ndk/androidlib/src/: lib.rs
arm-7thumb/: Makefile  adder.S  main.c  thumbtest.elf
arm-a-thumb-svc/: Makefile  main.c  thumb.S  thumbtest.elf
armv8-fpic/: Makefile  progglobals  progglobals-clang  progglobals-clang-stripped  progglobals-clang.s  progglobals-gcc  progglobals-gcc-stripped  progglobals-gcc.s  progglobals.c  progglobals_clang_stripped  progglobals_clang_symbols  progglobals_gcc_stripped
asm-ld/: Makefile  aarch64.lds  arm.lds  hello_aarch64.S  hello_arm.S  hello_x64.S  x86_64.lds
c-gtk4/: Makefile  menu.c
ccpp-c89-varstruct/: Makefile  varstruct.c
ccpp-castwars/: Makefile  castwars.cpp
ccpp-ehpersonality/: Makefile  ehpersonality.cpp  shapes.cpp
ccpp-except-simple/: Makefile  except.cpp  except.elf  except.s
ccpp-ext-statementexpr/: Makefile
ccpp-functionweird/: cweird.back  cweird.c
ccpp-gotplt/: Makefile  libtest.c  usetest.c
ccpp-inheritance/: Makefile  multiple_diamond.cpp  multiple_sbase.cpp  template_class.cpp
ccpp-linux-freestanding/: Makefile  aarch64.c  arm32.c  freestand.aarch64  freestand.armv7l  freestand.c  freestand.ppc64le  freestand.x86_64  ppc64.c  x64.c
ccpp-linux-sigaction-catch/: Makefile  main.c  seccomp.c
ccpp-lto-ifunc/: Makefile  lto.c
ccpp-multipleinheritance/: multiple.cpp
ccpp-python/: Makefile  embpy.c
ccpp-qt-invokemethod/: CMakeLists.txt  main.cpp  testclass.hpp
ccpp-setlongjmp/: Makefile  setlongjmp.c
ccpp-tailrecursion/: Makefile  fib.c
ccpp-template/: templates.cpp
ccpp-vtable/: Makefile  shapes  shapes.cpp  shapes.s
ccpp-vtable-except/: Makefile  shapes  shapes.cpp  shapes.s
ccpp-windows-seh/: Makefile  seh.c  stub.asm
clang-lld/: Makefile  hello.c
go-deferredpanic/: go.mod
graalvm-tests/: Makefile  PrettyPrintJSON.java  test.sh
haskell-except/: haskell-except.cabal  package.yaml
haskell-fam/: ChangeLog.md  README.md  haskell-fam.cabal  package.yaml
haskell-readert/: README.md  hs-readert.cabal  package.yaml
haskell-rs/: README.md  haskellrs-exe  package.yaml  stack.yaml
haskellrs/: ChangeLog.md  LICENSE  haskellrs.cabal
java-signed/: JavaSignedTypes.java  Makefile
lean-basics/: hello.lean  ntimes.lean
ocaml-except/: Makefile  except.ml
ocaml-hello/: Makefile  hello.ml
ocaml-learn/: dune-project  ocamltour.install
python3-nestedict/: nesteddict.py
rust-adc/: Cargo.toml
rust-adc/src/: main.rs
rust-assert-release/: Cargo.toml
rust-asynctrait/: Cargo.toml
rust-closures/: Cargo.toml
rust-const-generics-min/: Cargo.toml
rust-constfn-loop/: Cargo.toml
rust-dyon-helloworld/: README.txt  hello.dyon
rust-gluon-helloworld/: helloworld.gluon
rust-grmtools/: README.md  build.rs
rust-gtk/: Cargo.toml
rust-gtk/src/: main.rs
rust-interfaces/: Cargo.toml
rust-nom-json/: Cargo.toml
rust-nostd-callback/: Cargo.toml
rust-panic-thread/: Cargo.toml
rust-phantomdata/: Cargo.toml
rust-platforms/: Cargo.toml  build.rs
rust-python-interop/rust-use-py/: Cargo.toml
rust-python-interop/rust-use-py/src/: main.rs
rust-python-interop/rustpy/: Cargo.toml
rust-python-interop/rustpy/src/: lib.rs
rust-stackoverflow/: Cargo.toml
rust-static/: Cargo.toml
rust-syscall/: Cargo.toml
rust-uefi/: Cargo.toml  build.sh
rust-wasm/: Cargo.toml  Makefile  index.html  index.js
rust-wasm/src/: lib.rs
rust-windows-gui/: Cargo.toml  build.rs
rust-windows-gui/.cargo/: config
rust-windows-gui/src/: main.rs
(+81 files in other folders)
