[package]
name = "rust-adc"
version = "0.1.0"
authors = ["Antony Vennard <antony@vennard.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7"

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3
