[package]
name = "rust-gtk4"
version = "0.1.0"
edition = "2021"

[dependencies]
adw = { version = "0.4.1", package = "libadwaita" }
gdk4-wayland = {version="0.6.3", features=["wayland_crate"]}

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.gtk4]
version = "0.6.6"
features = ["gnome_43"]
