[package]
name = "androidlib"
version = "0.1.0"
authors = ["Antony Vennard <antony@vennard.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["dylib"]

[dependencies]
jni = { version = "0.19.0", default-features = false }
