[package]
name = "rust-use-py"
version = "0.1.0"
authors = ["Antony Vennard <antony@vennard.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.pyo3]
version = "0.13.1"
features = ["auto-initialize"]
